--- a/test/java/log4j.properties
+++ b/test/java/log4j.properties
@@ -21,6 +21,7 @@ log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
 #log4j.logger.org.apache.commons.beanutils=DEBUG
 log4j.logger.org.oddjob=DEBUG
 log4j.logger.org.oddjob.arooa=INFO
+log4j.logger.org.oddjob.schedules=INFO
 #log4j.logger.org.oddjob.arooa.beanutils=INFO
 #log4j.logger.org.oddjob.arooa.deploy=DEBUG
 
