--- a/build.xml
+++ b/build.xml
@@ -62,6 +62,8 @@
 		<property name="build.javadocs" value="${build.dir}/javadocs"/>
 		<property name="build.xjavadocs" value="${build.dir}/xjavadocs"/>
 
+		<property name="test.reports" value="${build.test}/reports"/>
+		
 		<property name="jar.name"       value="${name}-${build.version}.jar"/>
 
 		<filter token="Name"    value="${Name}"/>
@@ -336,13 +338,15 @@
 	</target>
 
 	<target name="all-tests" depends="jar" description="Perform jUnit tests">
-		<junit printsummary="yes" haltonfailure="yes" fork="yes">
+		<mkdir dir="${test.reports}"/>
+		
+		<junit printsummary="yes" haltonfailure="no" 
+				failureproperty="junit.failure" fork="yes">
 			<classpath>
 				<pathelement location="${build.test}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
-			<formatter type="plain" usefile="no" />
-			<batchtest>
+			<batchtest todir="${test.reports}">
 				<fileset dir="${build.test}">
 					<include name="**/test/*TestCase.class"/>
 					<include name="**/*Test.class" />
@@ -350,10 +354,21 @@
 					<exclude name="**/*$$*Test.class" />
 				</fileset>
 			</batchtest>
+			<formatter type="xml"/>
 			<sysproperty key="basedir" value="${basedir}"/>
 			<sysproperty key="oddjob.home" value="${oddjob.home}"/>
 			<sysproperty key="ant.file" value="${ant.file}"/>
 		</junit>
+		
+		<junitreport todir="${test.reports}">
+			<fileset dir="${test.reports}">
+		    	<include name="TEST-*.xml"/>
+			</fileset>
+		    <report todir="${test.reports}"/>
+		</junitreport>
+		
+		<fail if="junit.failure" message="Unit test(s) failed. See reports in ${test.reports}."/>	
+
 	</target>
 
 	<target name="single-test" depends="jar" description="Single JUnit test">
