--- a/test/java/log4j.properties
+++ b/test/java/log4j.properties
@@ -7,16 +7,12 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) [%X{ojname}] - %m%n
 log4j.appender.stdout.threshold=DEBUG
 
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=oddjob.log
-log4j.appender.R.threshold=DEBUG
-
-log4j.appender.R.MaxFileSize=100MB
-# Keep one backup file
-log4j.appender.R.MaxBackupIndex=1
-
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+log4j.appender.F=org.apache.log4j.FileAppender
+log4j.appender.F.append=false
+log4j.appender.F.file=junit.log
+log4j.appender.F.threshold=DEBUG
+log4j.appender.F.layout=org.apache.log4j.PatternLayout
+log4j.appender.F.layout.ConversionPattern=%5p [%t] (%F:%L) [%X{ojname}] - %m%n
 
 #log4j.logger.org.apache.commons.beanutils=DEBUG
 log4j.logger.org.oddjob=DEBUG
