--- a/build.xml
+++ b/build.xml
@@ -35,14 +35,11 @@
 		<property name="name"     value="arooa"/>
 		<property name="build.version"  value="${project.version}"/>
 
-		<property name="oddjob.src" value="../oddjob"/>
-		
 		<echo message="--------------------------------------------------------------"/>
 		<echo message="            ${Name} ${build.version}                                "/>
 		<echo message="--------------------------------------------------------------"/>
 		<echo message="Building with ${ant.version}"/>
 		<echo message="using build file ${ant.file}"/>
-		<echo message="oddjob.src is ${oddjob.src}"/>
 		<echo message="--------------------------------------------------------------"/>
 
 		<property name="debug"          value="on"/>
@@ -59,12 +56,13 @@
 		<property name="test.lib"     value="${test.dir}/lib"/>
 		<property name="packages"     value="org.oddjob"/>
 
-		<property name="build.dir"        value="./build"/>
-		<property name="build.src"        value="${build.dir}/src"/>
-		<property name="build.test"       value="${build.dir}/test"/>
-		<property name="build.classes"    value="${build.dir}/classes"/>
-		<property name="build.lib"        value="${build.dir}/lib"/>
-		<property name="build.javadocs"   value="${build.dir}/javadocs"/>
+		<property name="build.dir"        	value="./build"/>
+		<property name="build.src"        	value="${build.dir}/src"/>
+		<property name="build.classes"    	value="${build.dir}/classes"/>
+		<property name="build.test"       	value="${build.dir}/test"/>
+		<property name="build.test.classes" value="${build.test}/classes"/>
+		<property name="build.lib"        	value="${build.dir}/lib"/>
+		<property name="build.javadocs"   	value="${build.dir}/javadocs"/>
 
 		<property name="test.reports" value="${build.test}/reports"/>
 		
@@ -134,6 +132,7 @@
 	<!-- =================================================================== -->
 	<!-- Compiles the source directory                                       -->
 	<!-- =================================================================== -->
+	
 	<target name="compile" depends="prepare-src-main"
           description="Compiles the source code">
 
@@ -173,7 +172,7 @@
 		description="Generates the jar packages">
 
 	    <jar destfile="${build.lib}/${name}-tests-${build.version}.jar"
-	         basedir="${build.test}">
+	         basedir="${build.test.classes}">
 	    </jar>
 	</target>
 	         	
@@ -242,7 +241,7 @@
 	<target name="compile-tests" depends="compile" description="Compile jUnit tests">
 		<mkdir dir="${build.test}"/>
 
-		<copy todir="${build.test}" filtering="off">
+		<copy todir="${build.test.classes}" filtering="off">
 			<fileset dir="${test.src}">
 				<include name="**/*.xml"/>
 				<include name="**/*.properties"/>
@@ -251,7 +250,7 @@
 		
 		<!-- Compile tests -->
 		<javac srcdir="${test.src}"
-            destdir="${build.test}"
+            destdir="${build.test.classes}"
             debug="${debug}"
             optimize="${optimize}"
             deprecation="${deprecation}">
@@ -260,17 +259,17 @@
 
 	</target>
 
-	<target name="all-tests" depends="install" description="Perform jUnit tests">
+	<target name="all-tests" depends="compile-tests" description="Perform jUnit tests">
 		<mkdir dir="${test.reports}"/>
 		
 		<junit printsummary="yes" haltonfailure="no" 
 				failureproperty="junit.failure" fork="yes" forkmode="once">
 			<classpath>
-				<pathelement location="${build.test}" />
+				<pathelement location="${build.test.classes}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
 			<batchtest todir="${test.reports}">
-				<fileset dir="${build.test}">
+				<fileset dir="${build.test.classes}">
 					<include name="**/test/*TestCase.class"/>
 					<include name="**/*Test.class" />
 					<exclude name="**/AllTest.class" />
@@ -297,7 +296,7 @@
 	<target name="single-test" depends="jar" description="Single JUnit test">
 		<junit printsummary="yes" haltonfailure="yes" fork="yes">
 			<classpath>
-				<pathelement location="${build.test}" />
+				<pathelement location="${build.test.classes}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
 			<formatter type="plain" usefile="no" />
