--- a/test/java/log4j.properties
+++ b/test/java/log4j.properties
@@ -6,6 +6,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) [%X{ojname}] - %m%n
 log4j.appender.stdout.threshold=DEBUG
+log4j.appender.stdout.follow=true
 
 log4j.appender.F=org.apache.log4j.FileAppender
 log4j.appender.F.append=false
