Tidy up build and add toString for FilesType.

--- a/build.xml
+++ b/build.xml
@@ -336,6 +336,9 @@
 		<copy todir="${to.dir}">
 			<fileset dir=".">
 				<include name="build.xml"/>
+                <include name="ivy.xml"/>
+			    <include name="ivysettings.xml"/>
+                <include name="LICENSE.txt"/>
 			</fileset>
 		</copy>
 
