--- a/ivy.xml
+++ b/ivy.xml
@@ -12,8 +12,12 @@
 	</publications>  
 
 	<dependencies>
+        <dependency org="org.slf4j" name="slf4j-api" rev="1.7.25"
+            conf="default->default"/>
+        <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.25"
+            conf="default->default"/>
 	    <dependency org="log4j" name="log4j" rev="1.2.17"
-	    	conf="default->default" />
+	    	conf="default->default"/>
 	    <dependency org="commons-beanutils" name="commons-beanutils"
 	    	rev="1.9.2" conf="default->default" />
 		<dependency org="javax.inject" name="javax.inject" rev="1"
