--- a/build.xml
+++ b/build.xml
@@ -107,11 +107,7 @@
 		<mkdir dir="${build.src}"/>
 		<mkdir dir="${build.classes}"/>
 		<copy todir="${build.src}" filtering="on">
-			<fileset dir="${main.java.dir}">
-				<exclude name="**/*.gif"/>
-				<exclude name="**/*.properties"/>
-				<exclude name="**/*.xml"/>
-			</fileset>
+			<fileset dir="${main.java.dir}"/>
 		</copy>
 		<copy todir="${build.src}" filtering="off">
 			<fileset dir="${main.resources.dir}"/>
