--- a/build.xml
+++ b/build.xml
@@ -83,6 +83,8 @@
 	<!-- =================================================================== -->
 	<target name="prepare" depends="init">
 
+		<ivy:settings file="../oj-assembly/ivysettings.xml"/>
+		
 		<ivy:resolve />
 		        		
 		<ivy:cachepath pathid="classpath" conf="default,provided" />
@@ -351,7 +353,7 @@
 		<property name="maven.jar" 			value="${basedir}/build/${jar.name}" />
 		<property name="maven.javadoc.jar" 	value="${basedir}/build/${javadoc.jar.name}" />
 		<property name="maven.sources.jar" 	value="${basedir}/build/${sources.jar.name}" />
-		<property name="maven.pom" 			value="${basedir}/build/pom.xml" />
+		<property name="maven.pom" 			value="${basedir}/pom.xml" />
 
 	    <!-- defined maven snapshots and staging repository id and url -->
 		<property name="maven.snapshots.repository.id" 	value="sonatype-nexus-snapshots" />
@@ -362,7 +364,6 @@
 		<property name="maven.deploy.plugin" 	value="org.apache.maven.plugins:maven-deploy-plugin:2.6" />
 		<property name="maven.gpg.plugin" 		value="org.apache.maven.plugins:maven-gpg-plugin:1.3" />
 		
-		<copy file="${src.dir}/pom.xml" todir="${build.dir}" filtering="on"/>
 	</target>
 	
 	<target name="maven-install" depends="maven-init" 
