--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,8 @@
 
   <parent>
     <groupId>uk.co.rgordon</groupId>
-    <artifactId>oj-assembly</artifactId>
+    <artifactId>oj-parent</artifactId>
     <version>1.6-SNAPSHOT</version>
-    <relativePath>../oj-assembly/pom.xml</relativePath>
   </parent>
 
   <artifactId>arooa</artifactId>
