--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
 	
 	<taskdef resource="org/apache/ivy/ant/antlib.xml"
 	                 uri="antlib:org.apache.ivy.ant" 
-		classpath="../oj-assembly/antlibs/ivy-2.4.0.jar"/>
+		classpath="../oj-assembly/antlibs/ivy-2.5.0.jar"/>
 	
 	<!-- =================================================================== -->
 	<!-- Initialization target                                               -->
@@ -49,20 +49,19 @@
 		<!-- <property name="build.compiler" value="classic"/> -->
 
 		<property name="src.dir"              value="./src"/>
-		<property name="main.java.dir"        value="${src.dir}/main/java"/>
-        <property name="main.resources.dir"   value="${src.dir}/main/resources"/>
-		<property name="test.java.dir"        value="${src.dir}/test/java"/>
+		<property name="main.java"        value="${src.dir}/main/java"/>
+        <property name="main.resources"   value="${src.dir}/main/resources"/>
+		<property name="test.java"        value="${src.dir}/test/java"/>
         <property name="test.resources.dir"   value="${src.dir}/test/resources"/>
 		<property name="packages"             value="org.oddjob"/>
 
 		<property name="build.dir"        	value="./build"/>
 		<property name="build.src"        	value="${build.dir}/src"/>
 		<property name="build.classes"    	value="${build.dir}/classes"/>
-		<property name="build.test"       	value="${build.dir}/test"/>
-		<property name="build.test.classes" value="${build.test}/classes"/>
+		<property name="build.tests" value="${build.dir}/test-classes"/>
 		<property name="build.javadocs"   	value="${build.dir}/javadocs"/>
 
-		<property name="test.reports" value="${build.test}/reports"/>
+		<property name="test.reports" value="${build.dir}/test-reports"/>
 		
 		<property name="jar.name"       	value="${name}-${build.version}.jar"/>
 		<property name="sources.jar.name"   value="${name}-${build.version}-sources.jar"/>
@@ -85,9 +84,7 @@
 		<mkdir dir="${build.dir}"/>
 
 		<ivy:settings file="../oj-assembly/ivysettings.xml"/>
-		
-		<ivy:resolve />
-		        		
+
 		<ivy:cachepath pathid="classpath" conf="default,provided" />
 		
 		<ivy:cachepath pathid="test-cachepath" conf="test" />
@@ -108,12 +105,11 @@
 
 		<mkdir dir="${build.src}"/>
 		<mkdir dir="${build.classes}"/>
+
 		<copy todir="${build.src}" filtering="on">
-			<fileset dir="${main.java.dir}"/>
+			<fileset dir="${main.java}"/>
 		</copy>
-		<copy todir="${build.src}" filtering="off">
-			<fileset dir="${main.resources.dir}"/>
-		</copy>
+
 	</target>
 
 	<target name="jar-sources" depends="prepare-src-main">
@@ -130,7 +126,7 @@
           description="Compiles the source code">
 
 		<copy todir="${build.classes}">
-            <fileset dir="${main.resources.dir}"/>
+            <fileset dir="${main.resources}"/>
 		</copy>
 
 		<echo message="Compiling with Java ${ant.java.version}, debug ${debug}, optimize ${optimize}, deprecation ${deprecation}"/>
@@ -154,14 +150,19 @@
 
 	    <jar destfile="${build.dir}/${jar.name}"
 	         basedir="${build.classes}">
-	    </jar>
+			<metainf dir=".">
+				<include name="LICENSE.txt"/>
+				<include name="NOTICE.txt"/>
+			</metainf>
+
+		</jar>
 	</target>
 
 	<target name="jar-tests" depends="compile-tests" 
 		description="Generates the jar packages">
 
 	    <jar destfile="${build.dir}/${name}-tests-${build.version}.jar"
-	         basedir="${build.test.classes}">
+	         basedir="${build.tests}">
 	    </jar>
 	</target>
 	         	
@@ -228,15 +229,14 @@
 	<!-- =================================================================== -->
 	
 	<target name="compile-tests" depends="compile" description="Compile jUnit tests">
-		<mkdir dir="${build.test}"/>
 
-		<copy todir="${build.test.classes}" filtering="off">
+		<copy todir="${build.tests}" filtering="off">
 			<fileset dir="${test.resources.dir}"/>
 		</copy>
 		
 		<!-- Compile tests -->
-		<javac srcdir="${test.java.dir}"
-            destdir="${build.test.classes}"
+		<javac srcdir="${test.java}"
+            destdir="${build.tests}"
             debug="${debug}"
             optimize="${optimize}"
             deprecation="${deprecation}">
@@ -251,11 +251,11 @@
 		<junit printsummary="yes" haltonfailure="no" 
 				failureproperty="junit.failure" fork="yes" forkmode="once">
 			<classpath>
-				<pathelement location="${build.test.classes}" />
+				<pathelement location="${build.tests}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
 			<batchtest todir="${test.reports}">
-				<fileset dir="${build.test.classes}">
+				<fileset dir="${build.tests}">
 					<include name="**/test/*TestCase.class"/>
 					<include name="**/*Test.class" />
 					<exclude name="**/AllTest.class" />
@@ -279,10 +279,10 @@
 
 	</target>
 
-	<target name="single-test" depends="jar" description="Single JUnit test">
+	<target name="single-test" depends="compile-tests" description="Single JUnit test">
 		<junit printsummary="yes" haltonfailure="yes" fork="yes">
 			<classpath>
-				<pathelement location="${build.test.classes}" />
+				<pathelement location="${build.tests}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
 			<formatter type="plain" usefile="no" />
@@ -320,8 +320,10 @@
 			<fileset dir=".">
 				<include name="build.xml"/>
                 <include name="ivy.xml"/>
-			    <include name="ivysettings.xml"/>
                 <include name="LICENSE.txt"/>
+				<include name="NOTICE.txt"/>
+				<include name="README.md"/>
+				<include name="pom.xml"/>
 			</fileset>
 		</copy>
 
@@ -332,7 +334,7 @@
 	<!-- =================================================================== -->
 	<target name="dist-bin" depends="init">
 		
-		<!-- Oddjob retrieves Arooa as one if its dependencies and copies it
+		<!-- run-oddjob retrieves Arooa as one if its dependencies and copies it
 		     to the distribution dir. -->
 			
 		<echo message="Nothing to do."/>
