Prepare to add JSON support.

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,11 @@
     <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
-      <version>1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
     </dependency>
 
     <dependency>
