--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
