--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
