--- a/build.xml
+++ b/build.xml
@@ -5,9 +5,9 @@
 
 ============================================================================ -->
 
-<project xmlns:artifact="antlib:org.apache.maven.artifact.ant"
-	xmlns:ivy="antlib:org.apache.ivy.ant"
-	default="jar" basedir="." name="Arooa">
+<project
+		xmlns:ivy="antlib:org.apache.ivy.ant"
+		default="jar" basedir="." name="Arooa">
 
 	<taskdef uri="antlib:org.apache.maven.artifact.ant"
 	            resource="org/apache/maven/artifact/ant/antlib.xml"
@@ -61,6 +61,8 @@
 		<property name="build.classes"    	value="${build.dir}/classes"/>
 		<property name="build.tests" value="${build.dir}/test-classes"/>
 		<property name="build.javadocs"   	value="${build.dir}/javadocs"/>
+
+		<property name="target.dir"        	value="./target"/>
 
 		<property name="test.reports" value="${build.dir}/test-reports"/>
 		
@@ -335,7 +337,9 @@
 	<!-- =================================================================== -->
 	<!-- Prepares the binary distribution                                    -->
 	<!-- =================================================================== -->
-	<target name="dist-bin" depends="init">
+	<target name="dist-bin" depends="init"
+			description="Prepares the binary distribution"
+			if="dist.bin.dir">
 		
 		<!-- run-oddjob retrieves Arooa as one if its dependencies and copies it
 		     to the distribution dir. -->
@@ -343,96 +347,13 @@
 		<echo message="Nothing to do."/>
 
 	</target>
-	
-	<!-- =================================================================== -->
-	<!-- Maven Targets			                                     -->
-	<!-- =================================================================== -->
-	
-	<target name="maven-init" depends="init, jar, jar-sources, jar-javadoc">
-		
-		<property name="maven.groupId"		value="uk.co.gordon" />
-		<property name="maven.artifactId" 	value="${name}" />
-		<property name="maven.version" 		value="${version}" />
 
-	    <!-- define artifacts' name, which follows the convention of Maven -->
-		<property name="maven.jar" 			value="${basedir}/build/${jar.name}" />
-		<property name="maven.javadoc.jar" 	value="${basedir}/build/${javadoc.jar.name}" />
-		<property name="maven.sources.jar" 	value="${basedir}/build/${sources.jar.name}" />
-		<property name="maven.pom" 			value="${basedir}/pom.xml" />
-
-	    <!-- defined maven snapshots and staging repository id and url -->
-		<property name="maven.snapshots.repository.id" 	value="sonatype-nexus-snapshots" />
-		<property name="maven.snapshots.repository.url" value="https://oss.sonatype.org/content/repositories/snapshots/" />
-		<property name="maven.staging.repository.id" 	value="sonatype-nexus-staging" />
-		<property name="maven.staging.repository.url" 	value="https://oss.sonatype.org/service/local/staging/deploy/maven2/" />
-
-		<property name="maven.deploy.plugin" 	value="org.apache.maven.plugins:maven-deploy-plugin:2.6" />
-		<property name="maven.gpg.plugin" 		value="org.apache.maven.plugins:maven-gpg-plugin:1.3" />
-		
-	</target>
-	
-	<target name="maven-install" depends="maven-init" 
-			description="Install in local repository">
-		<artifact:install file="${maven.jar}">
-	    	<pom file="${maven.pom}"/>
-			<attach file="${maven.sources.jar}" type="jar" classifier="sources"/>
-			<attach file="${maven.javadoc.jar}" type="jar" classifier="javadoc"/>	  
-		</artifact:install>
-	</target>
-	
-    <target name="maven-deploy" depends="maven-init" 
-    	description="Deploy snapshot version to Maven snapshot repository">
-		<artifact:mvn>
-			<arg value="${maven.deploy.plugin}:deploy-file" />
-			<arg value="-Durl=${maven.snapshots.repository.url}" />
-			<arg value="-DrepositoryId=${maven.snapshots.repository.id}" />
-			<arg value="-DpomFile=${maven.pom}" />
-			<arg value="-Dfile=${maven.jar}" />
-			<arg value="-Dsources=${maven.sources.jar}" />
-			<arg value="-Djavadoc=${maven.javadoc.jar}" />
-		</artifact:mvn>
-    </target>
-	
-	<target name="maven-stage" depends="maven-init" 
-		description="Deploy release version to Maven staging repository">
-		<!-- sign and deploy the main artifact -->
-		<artifact:mvn>
-			<arg value="${maven.gpg.plugin}:sign-and-deploy-file" />
-			<arg value="-Durl=${maven.staging.repository.url}" />
-			<arg value="-DrepositoryId=${maven.staging.repository.id}" />
-			<arg value="-DpomFile=${maven.pom}" />
-			<arg value="-Dfile=${maven.jar}" />
-	        <arg value="-Pgpg" />
-		</artifact:mvn>
-
-		<!-- sign and deploy the sources artifact -->
-		<artifact:mvn>
-			<arg value="${maven.gpg.plugin}:sign-and-deploy-file" />
-			<arg value="-Durl=${maven.staging.repository.url}" />
-			<arg value="-DrepositoryId=${maven.staging.repository.id}" />
-			<arg value="-DpomFile=${maven.pom}" />
-			<arg value="-Dfile=${maven.sources.jar}" />
-			<arg value="-Dclassifier=sources" />
-			<arg value="-Pgpg" />
-		</artifact:mvn>
-	
-		<!-- sign and deploy the javadoc artifact -->
-		<artifact:mvn>
-			<arg value="${maven.gpg.plugin}:sign-and-deploy-file" />
-			<arg value="-Durl=${maven.staging.repository.url}" />
-			<arg value="-DrepositoryId=${maven.staging.repository.id}" />
-			<arg value="-DpomFile=${maven.pom}" />
-			<arg value="-Dfile=${maven.javadoc.jar}" />
-			<arg value="-Dclassifier=javadoc" />
-	        <arg value="-Pgpg" />
-		</artifact:mvn>
-	</target>
-	
 	<!-- =================================================================== -->
 	<!-- Clean targets                                                       -->
 	<!-- =================================================================== -->
 	<target name="clean" depends="init" description="Cleans the build directories">
 		<delete dir="${build.dir}"/>
+		<delete dir="${target.dir}"/>
 	</target>
 
 </project>
