--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,8 @@
     </dependency>
 
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
       <optional>true</optional>
     </dependency>
 
