--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,7 @@
             <configuration>
               <excludes>
                 <exclude>logback-test.xml</exclude>
+                <exclude>log4j2-test.xml</exclude>
               </excludes>
             </configuration>
           </execution>
